applications/software/home1/stalwart/fallback/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stalwart-secondary
  labels:
    app: stalwart
    instance: secondary
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stalwart
      instance: secondary
  template:
    metadata:
      labels:
        ignore_alert_not_ready: "true"
        app: stalwart
        instance: secondary
    spec:
      containers:
      - name: stalwart
        image: stalwartlabs/stalwart:latest@sha256:4f926193e5dd9ceb1e24ba48160702310381b12e51972c2fb0cc9de020388136
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          tcpSocket:
            port: 25
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - |
              perl -e 'use IO::Socket::INET; $h="stalwart-primary.stalwart.svc"; $p=2500;
              $s = IO::Socket::INET->new(PeerAddr=>"$h:$p", Proto=>"tcp", Timeout=>2);
              if ($s) { print $s "1"; close $s; exit 1 } else { exit 0 }'
        ports:
        - name: smtp
          protocol: TCP
          containerPort: 25
        - name: submission
          protocol: TCP
          containerPort: 587
        - name: smtps
          protocol: TCP
          containerPort: 465
        - name: imap
          protocol: TCP
          containerPort: 143
        - name: imaps
          protocol: TCP
          containerPort: 993
        - name: sieve
          protocol: TCP
          containerPort: 4190
        volumeMounts:
        - name: stalwart-config
          mountPath: /opt/stalwart/etc
          readOnly: true
        - name: hackcorp-net
          mountPath: /certs/hackcorp.net
          readOnly: true
        - name: yewolf-fr
          mountPath: /certs/yewolf.fr
          readOnly: true
        resources:
          requests:
            cpu: 0m
            memory: 0Mi
          limits:
            cpu: 1
            memory: 2Gi
      volumes:
      - name: stalwart-config
        secret:
          secretName: stalwart-fallback-config
          items:
          - key: config.toml
            path: config.toml
      - name: hackcorp-net
        secret:
          secretName: mail.hackcorp.net
      - name: yewolf-fr
        secret:
          secretName: mail.yewolf.fr
