applications/software/home1/stalwart/fallback/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-secondary
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: stalwart
    instance: secondary
