applications/software/home1/stalwart/fallback/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-secondary
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "stalwart-secondary.yewolf.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stalwart-secondary
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
